--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,53 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+@media only screen and (min-width: 768px) {
+  .homepage {
+    background-color: #fff;
+  }
+}
+
+.test{
+  background-color:aqua;
+
+}
+
+.stdButton{
+  width: 100px;  
+  background-color: #422F2F;
+}
+
+.stdButton p{
+  color: black
+}
+
+.form-control {
+  padding: 10px;
+  width: 70%;
+  height: 50%;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.01);
+  border: none;
+  border-radius: 0%;
+  border-bottom: 1px solid #80CED7;
+}
+
+
+.form-control:focus {
+  box-shadow: none;
+  border-bottom: 2.5px solid #80CED7;
+}
+
+.form-control::placeholder {
+  color: gray;
+}
+
+.form-control:focus::placeholder {
+  font-size: 10px;
+  color: #80CED7;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
