--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,7 @@
 
 html {
   font-family: 'Trebuchet MS', sans-serif;
-  margin-left: 10px;
-  margin-right: 10px;
+  font-size: 14px;
 }
 
 
@@ -183,7 +182,7 @@ article {
   border: 2px solid black;
   margin-top: 20px;
   color: white;
-  padding: 10px 0;
+  padding: 12px 0;
   font-size: 14px;
   font-weight: 600;
   line-height: 1;
@@ -197,9 +196,10 @@ article {
   .list {
     width: 70%;
     margin-left: auto;
-    margin-right: auto; 
-       
+    margin-right: auto;
+
   }
+
   .instButton {
     width: 300px;
     text-decoration: none;
@@ -210,6 +210,7 @@ article {
   .list {
     font-size: 11px;
   }
+
   .instButton {
     width: 300px;
     font-size: 10px;
@@ -238,3 +239,81 @@ article {
   width: 20px;
 }
 
+.toast-message {
+  border: 1px solid #3A9EA5 !important;
+  border-radius: 50px !important;
+  background: #ffff !important;
+  width: 250px;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.toast-message::before {
+  position: relative;
+  z-index: 100000;
+  left: 12px;
+  top: 6px;
+}
+
+.toast-message::after {
+  position: absolute;
+  color: #333333;
+  font-size: 15px;
+  font-weight: 700;
+  left: 265px;
+  padding-top: 14px !important;
+}
+
+.main {
+  width: 100%;
+  height: 100vh;
+}
+
+.bgVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  margin-top: 80px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
+}
+
+.btnStart{
+  width: 100px;
+  text-decoration: none;
+  padding: 10px 10px;
+  border: 2px solid #bababa;
+  color: white;
+  margin-top: 200px;
+
+}
+
+.btnGetStart{
+  margin-top: 200px;
+  width: 100px;
+  background-color: white;
+  text-decoration: none;
+  padding: 10px 10px;
+  color: black;
+  margin-left: 20px;
+}
